sandbox/output
GiledeRose.java:66: error: invalid method declaration; return type required
  public isSellInLess0() {
         ^
1 error
